--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Diego Alejandro Riascos Estupiñan, dariascose@unadvirtual.edu.co" />
+    <meta name="description" content="Una pagina de presentacion del estudiante" />
+    <meta name="keywords" content="UNAD, Nombre, Progrma, Skype, gmail" />
 	<title>Fase 1 - Planeacion</title>
 </head>
 <>
