--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <meta name="keywords" content="UNAD, Nombre, Progrma, Skype, gmail" />
 	<title>Fase 1 - Planeacion</title>
 </head>
-<>
 	<h1>Actividad - Diego Riascos</h1>
     <h3>Proyecto de sitio Web año 2021 - I Periodo Complementario 8-03 </h3>
     <p>
@@ -19,7 +18,7 @@
         <ol type=”A”>
             <li><b>Celular:</b> +57 315 490 98 12</li>
             <li><b>Skype:</b> riascos376@outlook.com</li>
-            <li><b>Correo Institucional: dariascose@unadvirtual.edu.co</b></li>
+            <li><b>Correo Institucional:</b> dariascose@unadvirtual.edu.co</li>
             <li><b>Correo personal:</b> riascos673@gmail.com</li>
           </ol>
     </p>
