--- a/Fase 2 - Diseño y Construcion/design.html
+++ b/Fase 2 - Diseño y Construcion/design.html
@@ -81,7 +81,7 @@
                 <p>
 
                 </p>
-                <img src="https://share.balsamiq.com/c/azyyGj6sBfyZsGGQrxCNzn.png">
+                <img src="https://balsamiq.cloud/s194v2g/ppbk7c0">
             </article>
         </section>
         <br>
