--- a/Fase 2 - Diseño y Construcion/design.html
+++ b/Fase 2 - Diseño y Construcion/design.html
@@ -81,7 +81,7 @@
                 <p>
 
                 </p>
-                <img src="https://balsamiq.cloud/s194v2g/ppbk7c0">
+                <img src="http://drive.google.com/uc?export=view&id=1q0AJHXmttRmrd5GT6O4wBZkALCAr8UOx" alt="" width="1025" height="”20”">
             </article>
         </section>
         <br>
