--- a/index.html
+++ b/index.html
@@ -22,5 +22,12 @@
             <li><b>Correo personal:</b> riascos673@gmail.com</li>
           </ol>
     </p>
+    <footer>
+            <a href="https://github.com/riascos673/DSW-DiegoRiascos.git" target="_blank"> IR AL REPOSITORIO</a>
+            <h2>
+                <a href="Fase 2 - Diseño y Construcion\design.html" target="_blank"> Fase 2 - Diseño y construccion I</a><br>
+             </h2>
+    </footer>
+
 </body>
 </html>
