--- a/index.html
+++ b/index.html
@@ -20,17 +20,20 @@
             <li><b>Skype:</b> riascos376@outlook.com</li>
             <li><b>Correo Institucional:</b> dariascose@unadvirtual.edu.co</li>
             <li><b>Correo personal:</b> riascos673@gmail.com</li>
-          </ol>
+        </ol>
     </p>
- 
     <footer>
             <h3>
-                <a href="https://github.com/riascos673/DSW-DiegoRiascos.git" target="_blank"> IR AL REPOSITORIO</a>
+                <a href="https://github.com/riascos673/DSW-DiegoRiascos.git" target="_blank"> Ir al Repositorio</a>
             </h3>
-            
+
+            <h3>
+                <a href="https://riascos673.github.io/DSW-DiegoRiascos/" target="_blank"> Ir al Gitghub Page</a>
+            </h3>
+
             <h3>
                 <a href="Fase 2 - Diseño y Construcion\design.html" target="_blank"> Fase 2 - Diseño y construccion I</a><br>
-             </h3>
+            </h3>
     </footer>
 
 </body>
