--- a/Fase 3 - Diseño y Construcion 2/index.html
+++ b/Fase 3 - Diseño y Construcion 2/index.html
@@ -8,6 +8,7 @@
     </head>
 
     <body>
+        <div class="container">
         <header>
             <h1> La interfaz de usuario, Interacción Humano Ordenador</h1>
         </header>
@@ -105,6 +106,7 @@
             Skype: riascos376@outlook.com <br>
             Fecha actualización: 21/06/2021<br>
         </footer>
+        </div>
         <hr>
     </body>
 </html>
