--- a/Fase 3 - Diseño y Construcion 2/Recurso1.html
+++ b/Fase 3 - Diseño y Construcion 2/Recurso1.html
@@ -36,14 +36,10 @@
     <div>
         <section>
 
-            <h3>Informacion del Autor</h3><br>
-            <img src="img/Foto de perfil.jpg" alt="" width="300"><br><br>
-            <li><b>Nombre: </b>Diego Alejandro Riascos Estupiñan</li>
-            <li><b>Codigo: </b>1.192.790.968</li>
-            <li><b>Programa:</b>Ingenieria de Sistemas</li>
-            <li><b>Correo Electronico:</b> dariascose@unadvirtual.com</li>
-            <li><b>Skype:</b> riascos673@outlook.com</li>
-            
+            <h3>Descripción Recurso 1</h3><br>
+            <h4>Interfaz de usuario</h4><br>
+            <audio src="audio/Interfaz de usuario.m4a" controls="controls">
+            </audio>
             
         </section>
         <aside>
