--- a/Fase 3 - Diseño y Construcion 2/Recurso2.html
+++ b/Fase 3 - Diseño y Construcion 2/Recurso2.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <img src="img/logo.jpg" alt="">
-        <h1> La interfaz de usuario, Interacción Humano Ordenador</h1>
+        <h1>La interfaz de usuario, Interacción Humano Ordenador</h1>
     </header>
     <nav class="menu-area">
         <ul>
@@ -36,15 +36,11 @@
     <div>
         <section>
 
-            <h3>Informacion del Autor</h3><br>
-            <img src="img/Foto de perfil.jpg" alt="" width="300"><br><br>
-            <li><b>Nombre: </b>Diego Alejandro Riascos Estupiñan</li>
-            <li><b>Codigo: </b>1.192.790.968</li>
-            <li><b>Programa:</b>Ingenieria de Sistemas</li>
-            <li><b>Correo Electronico:</b> dariascose@unadvirtual.com</li>
-            <li><b>Skype:</b> riascos673@outlook.com</li>
-            
-            
+            <h3>Descripción Recurso 2</h3><br>
+            <h4>Interacion Humano-Ordenador</h4><br>
+
+            <audio src="audio/Interacion Humano-Ordenador.m4a" controls="controls">
+            </audio>
         </section>
         <aside>
             <iframe
@@ -62,4 +58,5 @@
         <p>Fecha de Actulización: 14 de Julio de 2021</p>
     </footer>
 </body>
+
 </html>
