--- a/Fase 3 - Diseño y Construcion 2/Tema1.html
+++ b/Fase 3 - Diseño y Construcion 2/Tema1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -35,23 +35,12 @@
     </nav>
     <div>
         <section>
-
-            <h3>Informacion del Autor</h3><br>
-            <img src="img/Foto de perfil.jpg" alt="" width="300"><br><br>
-            <li><b>Nombre: </b>Diego Alejandro Riascos Estupiñan</li>
-            <li><b>Codigo: </b>1.192.790.968</li>
-            <li><b>Programa:</b>Ingenieria de Sistemas</li>
-            <li><b>Correo Electronico:</b> dariascose@unadvirtual.com</li>
-            <li><b>Skype:</b> riascos673@outlook.com</li>
-            
-            
+            <h2> Tema 1 - Interfaz de Usuario</h2><br>
+            <iframe src="pdf/Tema 1 - Interfaz de Usuario.pdf" frameborder="0" height="400" width="600"></iframe>
         </section>
-        <aside>
-            <iframe
-                src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FUniversidadUNAD%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
-                width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
-                allowfullscreen="true"
-                allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+
+        <aside><!--Seccion lateral-->
+            <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FUniversidadUNAD%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
         </aside>
 
     </div>
@@ -62,4 +51,5 @@
         <p>Fecha de Actulización: 14 de Julio de 2021</p>
     </footer>
 </body>
+
 </html>
