--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
             <h3>
                 <a href="Fase 2 - Diseño y Construcion\design.html" target="_blank"> Fase 2 - Diseño y construccion I</a><br>
             </h3>
+
+            <h3>
+                <a href="Fase 3 - Diseño y Construcion 2\index.html" target="_blank"> Fase 3 - Diseño y construccion II</a><br>
+            </h3>
     </footer>
 
 </body>
