--- a/index.html
+++ b/index.html
@@ -26,17 +26,21 @@
             <h3>
                 <a href="https://github.com/riascos673/DSW-DiegoRiascos.git" target="_blank"> Ir al Repositorio</a>
             </h3>
-
+            <hr><hr>
             <h3>
                 <a href="https://riascos673.github.io/DSW-DiegoRiascos/" target="_blank"> Ir al Gitghub Page</a>
             </h3>
-
+            <hr><hr>
             <h3>
                 <a href="Fase 2 - Diseño y Construcion\design.html" target="_blank"> Fase 2 - Diseño y construccion I</a><br>
             </h3>
-
+            <hr><hr>
             <h3>
                 <a href="Fase 3 - Diseño y Construcion 2\index.html" target="_blank"> Fase 3 - Diseño y construccion II</a><br>
+            </h3>
+            <hr><hr>
+            <h3>
+                <a href="Fase 4 - Diseño y Construcion 3\index.html" target="_blank"> Fase 3 - Diseño y construccion III</a><br>
             </h3>
     </footer>
 
