--- a/Fase 3 - Diseño y Construcion 2/Recurso1.html
+++ b/Fase 3 - Diseño y Construcion 2/Recurso1.html
@@ -25,8 +25,8 @@
             </li>
             <li><a href="#">Recursos</a>
                 <ul class="dropdown-1">
-                    <li> <a href="recurso1.html">Recurso 1</a> </li>
-                    <li> <a href="recurso2.html">Recurso 2</a> </li>
+                    <li> <a href="Recurso1.html">Recurso 1</a> </li>
+                    <li> <a href="Recurso2.html">Recurso 2</a> </li>
                 </ul>
             </li>
             <li><a href="#">Aprendizaje</a>
