--- a/Fase 4 - Diseño y Construcion 3/aprendizaje2.html
+++ b/Fase 4 - Diseño y Construcion 3/aprendizaje2.html
@@ -48,8 +48,8 @@
                             Recursos
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-                            <li><a class="dropdown-item" href="recurso1.html">Recurso 1</a></li>
-                            <li><a class="dropdown-item" href="recurso2.html">Recurso 2</a></li>
+                            <li><a class="dropdown-item" href="Recurso1.html">Recurso 1</a></li>
+                            <li><a class="dropdown-item" href="Recurso2.html">Recurso 2</a></li>
                         </ul>
                     </li>
 
