--- a/Fase 3 - Diseño y Construcion 2/Tema1.html
+++ b/Fase 3 - Diseño y Construcion 2/Tema1.html
@@ -41,7 +41,7 @@
     <div>
         <section>
             <h2> Tema 1 - Interfaz de Usuario</h2><br>
-            <iframe src="pdf/Tema 1 - Interfaz de Usuario.pdf" frameborder="0" height="400" width="600"></iframe>
+            <iframe src="pdf/Tema 1 - Interfaz de Usuario.pdf" frameborder="0" height="400" width="600" id="pdf"></iframe>
         </section>
 
         <aside><!--Seccion lateral-->
